<resources>
    <string name="app_name">闲豆</string>

    <string name="take_photo">拍照</string>
    <string name="album_photo">相册</string>

    <string name="msg_no_camera">无法启动相机！请在设置中开启相机权限</string>
    <string name="please_open_write_sdcard_permission">请开启读写存储权限</string>
    <string name="pick_avatar">头像选择</string>
    <string name="input_not_null">内容不能为空！</string>
    <string name="network_error">网络连接失败</string>

    <string name="haoyun">好孕</string>
    <string name="discover">发现</string>
    <string name="shequ">社区</string>
    <string name="wode">我的</string>

    <string name="beiyun">备孕</string>
    <string name="yunyu">孕育</string>
    <string name="yuer">育儿</string>

    <string name="finish">完成</string>
    <string name="publish">发布</string>
    <string name="collect">收藏</string>
    <string name="message">消息</string>
    <string name="man">男</string>
    <string name="woman">女</string>

    <string name="community_content">社区帖子</string>
    <string name="category_tag">#%1$s#</string>
    <string name="youer_baojian">幼儿保健</string>

    <!--备孕-->
    <string name="jintianhaoyun">今天好孕率</string>
    <string name="zhangzishi">涨姿势</string>
    <string name="baidailasi">白带拉丝</string>
    <string name="bchaocepai">B超测排</string>
    <string name="qiyuan">祈愿</string>
    <string name="qiyuan1">祈&#160;&#160;愿</string>
    <string name="new_detail">资讯详情</string>

    <string name="beiyunzhilan">备孕指南</string>
    <string name="tiwei">体位（射精时）</string>
    <string name="tiwei_brief">备孕的过程中，良好的射精体位是不可或缺的一部分，一起看看常见的射精体位，助您好孕</string>
    <string name="zishi_tip">（ 请选择查看对应姿势 ）</string>
    <string name="xueming">学名：%1$s</string>
    <string name="female_comfort_label">女方舒适度：</string>
    <string name="male_comfort_label">男方努力值：</string>
    <string name="describe">描述：</string>
    <string name="qiyuan_describe">祈愿，愿诸天菩萨赐福好孕</string>
    <string name="qiyuan_input_hint">请输入祈愿内容</string>
    <string name="qiyuan_wall">祈愿墙</string>
    <string name="qiyuan_time">许愿日期：%1$s</string>

    <!--孕育-->
    <string name="huaiyunsishizhou">怀孕40周</string>
    <string name="erbaibashitian">280天</string>
    <string name="yunqizhuyi">孕期注意</string>
    <string name="taijiaoyinyue">胎教音乐</string>
    <string name="taijiaozhishi">胎教知识</string>
    <string name="taijiao">胎教</string>

    <string name="yunyuzhilan">孕育指南</string>

    <string name="meiyue_taijiao">每月胎教</string>
    <string name="settings">设置</string>
    <string name="click_to_skip">点击跳过</string>

    <string name="shuxinting">舒心听</string>
    <string name="wenqingxu">稳情绪</string>
    <string name="tinghuankuai">听欢快</string>
    <string name="xuehengqu">学哼曲</string>
    <string name="laihudong">来互动</string>
    <string name="gongjiaoliu">共交流</string>
    <string name="jiaoganzhi">教感知</string>
    <string name="xiangleshi">享乐事</string>
    <string name="zuoyundong">做运动</string>
    <string name="huanyali">缓压力</string>

    <!--育儿-->
    <string name="yiqianyiye">一千零一夜</string>
    <string name="antusheng">安徒生童话</string>
    <string name="gelintonghua">格林童话</string>
    <string name="yuerzhinan">育儿指南</string>


    <string name="play_settings">播放设置</string>
    <string name="current_version">当前版本</string>

    <string name="example_image">示例图</string>
    <string name="shipin_tuijian">饮食推荐：%1$s</string>
    <string name="zuofa">做法</string>
    <string name="cailiao">材料</string>

    <string name="play_time_start">00:00</string>
    <string name="music_notify_subtitle">怀孕%1$s月胎教精选</string>
    <string name="mode_loop">列表循环</string>
    <string name="mode_shuffle">随机播放</string>
    <string name="mode_one">单曲循环</string>
    <string name="menu_timer">定时停止播放</string>
    <string name="timer_set">设置成功，将于%s分钟后关闭</string>
    <string name="timer_cancel">定时停止播放已取消</string>

    <string name="pregnancy_work">工作孕期注意</string>
    <string name="renchenfanying">妊娠反应怎么办</string>
    <string name="yunqijiancha">孕期检查知几点</string>
    <string name="yunqixingshenghuo">孕期生活要素</string>
    <string name="yunqijibing">孕期疾病注意</string>
    <string name="yunqiyingyang">孕期营养与发育</string>

    <string name="taijiao1">早期胎教</string>
    <string name="taijiao2">中期胎教</string>
    <string name="taijiao3">末期胎教</string>

    <!--我的-->
    <string name="my_note">我的帖子</string>
    <string name="my_circle">我的圈子</string>
    <string name="my_reply">我的回复</string>
    <string name="my_collect">我的收藏</string>
    <string name="about_us">关于我们</string>
    <string name="login_register">登录/注册</string>
    <string name="use_phone_login">请使用手机登录</string>
    <string name="enter_phone_num">请输入手机号码</string>
    <string name="enter_auth_code">请输入验证码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="login">登录</string>
    <string name="user_protocol_prefix">温馨提示：未注册用户登录时</string>
    <string name="user_protocol_suffix1">将自动注册，即表示同意</string>
    <string name="user_protocol_suffix2">《用户协议》</string>

    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="location">所在地区</string>
    <string name="date">设置日期</string>
    <string name="phone">已绑定手机</string>
    <string name="logout">退出当前帐号</string>
    <string name="user_info">个人资料</string>
    <string name="update_info">修改资料</string>

    <string name="input_nickname">请输入昵称</string>
    <string name="input_nickname_not_null">昵称不能为空</string>
    <string name="input_address">请输入地址</string>
    <string name="input_address_not_null">地址不能为空</string>
    <string name="input_article_title">标题</string>

    <!--社区-->
    <string name="yaobaobao">我要宝宝</string>
    <string name="hot_recommend">热门推荐</string>
    <string name="comment">评论</string>
    <string name="comment_num">评论 (%1$s)</string>
    <string name="my_message">我的消息</string>
    <string name="edit_article">编辑内容</string>
    <string name="quick_question">快速提问</string>
    <string name="for_free">免费</string>
    <string name="question_detail">每天34323个问题被宝妈们解答</string>
    <string name="health_and_fitness">幼儿保健</string>
    <string name="knowledge_detail">不懂就来查，帮助宝妈解决幼儿问题</string>
    <string name="tools">推荐工具</string>
    <string name="tube">试管</string>
    <string name="yuer1">#育儿</string>
    <string name="taijiao4">#胎教</string>
    <string name="beiyun1">#备孕</string>
    <string name="set_top">置顶</string>

    <string-array name="taijiao">
        <item>早期胎教</item>
        <item>中期胎教</item>
        <item>末期胎教</item>
    </string-array>
    <integer-array name="timer_int">
        <item>0</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>90</item>
    </integer-array>
    <string-array name="timer_text">
        <item>不开启</item>
        <item>10分钟后</item>
        <item>20分钟后</item>
        <item>30分钟后</item>
        <item>45分钟后</item>
        <item>60分钟后</item>
        <item>90分钟后</item>
    </string-array>
    <string-array name="pregnancy_week">
        <item>第1周</item>
        <item>第2周</item>
        <item>第3周</item>
        <item>第4周</item>
        <item>第5周</item>
        <item>第6周</item>
        <item>第7周</item>
        <item>第8周</item>
        <item>第9周</item>
        <item>第10周</item>
        <item>第11周</item>
        <item>第12周</item>
        <item>第13周</item>
        <item>第14周</item>
        <item>第15周</item>
        <item>第16周</item>
        <item>第17周</item>
        <item>第18周</item>
        <item>第19周</item>
        <item>第20周</item>
        <item>第21周</item>
        <item>第22周</item>
        <item>第23周</item>
        <item>第24周</item>
        <item>第25周</item>
        <item>第26周</item>
        <item>第27周</item>
        <item>第28周</item>
        <item>第29周</item>
        <item>第30周</item>
        <item>第31周</item>
        <item>第32周</item>
        <item>第33周</item>
        <item>第34周</item>
        <item>第35周</item>
        <item>第36周</item>
        <item>第37周</item>
        <item>第38周</item>
        <item>第39周</item>
        <item>第40周</item>
    </string-array>

    <string-array name="two_hundred_eighty">
        <item>孕妇早起</item>
        <item>孕妇中期</item>
        <item>孕妇后期</item>
    </string-array>

</resources>
