<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!--这里必须让LinearLayout作为顶层布局-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="297dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <TextView
            style="@style/text15"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/use_phone_login" />

        <FrameLayout
            android:id="@+id/fl_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="2dp">

            <ImageView
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_close" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="52dp"
            android:layout_marginRight="52dp"
            android:layout_marginTop="52dp"
            android:orientation="vertical">

            <!--手机号码-->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="47dp">

                <TextView
                    style="@style/text15"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:text="+86"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="46dp"
                    android:layout_marginRight="100dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_phone_num"
                    android:inputType="number"
                    android:textColorHint="@color/gray4"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/iv_phone_clear"
                    android:layout_width="16.5dp"
                    android:layout_height="16.5dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:src="@mipmap/ic_edit_clear" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="#c6c6c6" />
            </RelativeLayout>

            <!--验证码-->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="47dp">

                <EditText
                    android:id="@+id/et_auth_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="46dp"
                    android:layout_marginRight="100dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_auth_code"
                    android:inputType="number"
                    android:textColorHint="@color/gray4"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_get_auth"
                    android:layout_width="74dp"
                    android:layout_height="29dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/shape_text_gray_background"
                    android:gravity="center"
                    android:text="@string/get_auth_code"
                    android:textColor="@color/selector_auth_code_color"
                    android:textSize="12sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_alignParentBottom="true"
                    android:background="#c6c6c6" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_login"
                style="@style/text15"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/selectable_common_white_pressed_bg"
                android:padding="5dp"
                android:text="@string/login"
                android:textColor="@color/red" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="19dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/text15"
                android:text="@string/user_protocol_prefix"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/text15"
                    android:text="@string/user_protocol_suffix1"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_protocol"
                    style="@style/text15"
                    android:text="@string/user_protocol_suffix2"
                    android:textColor="@color/red"
                    android:textSize="12sp" />
            </LinearLayout>


        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
